added pt measurement to out.widths

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -43,7 +43,7 @@ labels for new observations without known class labels.
 > If you do, the model gets to "see" the test data in advance, making it look more accurate than it really is. Imagine
 > how bad it would be to overestimate your classifier's accuracy when predicting whether a patient's tumour is malignant or benign!
 
-```{r 06-training-test, echo = FALSE, warning = FALSE, fig.cap = "Splitting the data into training and testing sets", fig.retina = 2, out.width = "600"}
+```{r 06-training-test, echo = FALSE, warning = FALSE, fig.cap = "Splitting the data into training and testing sets", fig.retina = 2, out.width = "600pt"}
 knitr::include_graphics("img/training_test.jpeg")
 ```
 
@@ -57,7 +57,7 @@ Note that there are other measures for how well classifiers perform, such as *pr
 these will not be discussed here, but you will likely encounter them in other more advanced
 books on this topic. 
 
-```{r 06-ML-paradigm-test, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Process for splitting the data and finding the prediction accuracy", fig.retina = 2, out.width = "800"}
+```{r 06-ML-paradigm-test, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Process for splitting the data and finding the prediction accuracy", fig.retina = 2, out.width = "800pt"}
 knitr::include_graphics("img/ML-paradigm-test.png")
 ```
 
@@ -455,7 +455,7 @@ Here, $C=5$ different chunks of the data set are used,
 resulting in 5 different choices for the **validation set**; we call this
 *5-fold* cross-validation. 
 
-```{r 06-cv-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "5-fold cross validation", fig.retina = 2, out.width = "800"}
+```{r 06-cv-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "5-fold cross validation", fig.retina = 2, out.width = "800pt"}
 knitr::include_graphics("img/cv.png")
 ```
 
@@ -711,7 +711,7 @@ can tune the classifier (e.g., select the number of neighbours $K$ in KNN)
 by maximizing estimated accuracy via cross-validation. This 
 process is summarized in Figure \@ref(fig:06-overview).
 
-```{r 06-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Overview of KNN classification", fig.retina = 2, out.width = "660"}
+```{r 06-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Overview of KNN classification", fig.retina = 2, out.width = "660pt"}
 knitr::include_graphics("img/train-test-overview.jpeg")
 ```
 
@@ -795,7 +795,7 @@ corrupt the set of nearest neighbours that vote on the class of the new
 observation to predict.  
 
 <center>
-```{r 06-performance-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600", fig.cap = "Effect of inclusion of irrelevant predictors"}
+```{r 06-performance-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600pt", fig.cap = "Effect of inclusion of irrelevant predictors"}
 # get accuracies after including k irrelevant features
 ks <- c(0, 5, 10, 15, 20, 40)
 fixedaccs <- list()
@@ -881,14 +881,14 @@ variables, the number of neighbours does not increase smoothly; but the general 
 Figure \@ref(fig:06-fixed-irrelevant-features) corroborates
 this evidence; if we fix the number of neighbours to $K=3$, the accuracy falls off more quickly.
 
-```{r 06-neighbours-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600", fig.cap = "Tuned number of neighbours for varying number of irrelevant predictors"}
+```{r 06-neighbours-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600pt", fig.cap = "Tuned number of neighbours for varying number of irrelevant predictors"}
 plt_irrelevant_nghbrs <- ggplot(res) +
               geom_line(mapping = aes(x=ks, y=nghbrs)) +
               labs(x = "Number of Irrelevant Predictors", y = "Number of neighbours")
 plt_irrelevant_nghbrs
 ```
 
-```{r 06-fixed-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600", fig.cap = "Accuracy versus number of irrelevant predictors for tuned and untuned number of neighbours"}
+```{r 06-fixed-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600pt", fig.cap = "Accuracy versus number of irrelevant predictors for tuned and untuned number of neighbours"}
 res_tmp <- res %>% pivot_longer(cols=c("accs", "fixedaccs"), names_to="Type", values_to="accuracy")
 plt_irrelevant_nghbrs <- ggplot(res_tmp) +
               geom_line(mapping = aes(x=ks, y=accuracy, color=Type)) +
@@ -1092,7 +1092,7 @@ where the elbow occurs, and whether adding a variable provides a meaningful incr
 > part of tuning your classifier, you *cannot use your test data* for this
 > process! 
 
-```{r 06-fwdsel-3, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600", fig.cap = "Estimated accuracy versus the number of predictors for the sequence of models built using forward selection"}
+```{r 06-fwdsel-3, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600pt", fig.cap = "Estimated accuracy versus the number of predictors for the sequence of models built using forward selection"}
 fwd_sel_accuracies_plot <- accuracies %>%
   ggplot(aes(x = size, y = accuracy)) +
   geom_line() +
