--- a/viz.Rmd
+++ b/viz.Rmd
@@ -679,7 +679,7 @@ You can see why vector graphics formats are so useful: because they're just base
 This makes them great for presentation media of all sizes, from papers to posters to billboards.
 
 
-```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="230px", out.height="200px", fig.align= "center", message =F}
+```{r 03-raster-image, echo=FALSE, fig.cap = "Zoomed in `faithful`, raster (PNG, left) and vector (SVG, right) formats", fig.show="hold", out.width="230pt", out.height="200pt", fig.align= "center", message =F}
 knitr::include_graphics("img/faithful_zoom.png")
 knitr::include_graphics("img/faithful_zoom.svg")
 ```
