--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -52,20 +52,20 @@ library(tidyverse)
 library(canlang)
 ```
 
-```{r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Rows are observations in a data frame", fig.retina = 2, out.width = "650"}
+```{r 02-obs, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Rows are observations in a data frame", fig.retina = 2, out.width = "650pt"}
 knitr::include_graphics("img/obs.jpeg")
 ```
 
 and the columns are the variables:
 
 
-```{r 02-vars, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Columns are variables in a data frame", fig.retina = 2, out.width = "700"}
+```{r 02-vars, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Columns are variables in a data frame", fig.retina = 2, out.width = "700pt"}
 knitr::include_graphics("img/vars.jpeg")
 ```
 
 From a computer programming perspective, in R, a data frame is a special subtype of a list object whose elements (columns) are *vectors*. For example, the data frame in Figure \@ref(fig:02-vectors) has three vectors whose names are `region`, `year` and `population`.
 
-```{r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with 3 vectors", fig.retina = 2, out.width = "700"}
+```{r 02-vectors, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame with 3 vectors", fig.retina = 2, out.width = "700pt"}
 knitr::include_graphics("img/vectors.jpeg")
 ```
 
@@ -76,7 +76,7 @@ In R, **vectors** are objects that can contain one or more elements. The vector 
 Lists, which are sometimes called recursive vectors because lists can contain other lists.
 In the vector shown in Figure \@ref(fig:02-vector), the elements are of integer type:
 
-```{r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a numeric type vector", fig.retina = 2, out.width = "700"}
+```{r 02-vector, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example of a numeric type vector", fig.retina = 2, out.width = "700pt"}
 knitr::include_graphics("img/vector.jpeg")
 ```
 
@@ -108,7 +108,7 @@ Lists are also objects in R that have multiple elements, you can think of them a
 within a single vector must be of the same type (e.g., all elements are numbers), whereas elements within a single list can be of different 
 types (e.g., characters, numbers, logicals and even other lists can be elements in the same list). 
 
-```{r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list", fig.retina = 2, out.width = "650"}
+```{r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list", fig.retina = 2, out.width = "650pt"}
 knitr::include_graphics("img/vec_vs_list.jpeg")
 ```
 
@@ -126,7 +126,7 @@ containing qualities or values, for different statistical variables linked
 in a row for one observation - these columns cannot be independently sorted.
 This is similar to a table in a database.
 
-```{r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types", fig.retina = 2, out.width = "650"}
+```{r 02-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Data frame and vector types", fig.retina = 2, out.width = "650pt"}
 knitr::include_graphics("img/dataframe.jpeg")
 ```
 
@@ -161,7 +161,7 @@ Tidy data satisfy the following three criteria [@wickham2014tidy]:
 - each column is a single variable, and
 - each value is a single cell (i.e., its row and column position in the data frame is not shared with another value)
 
-```{r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Tidy data", fig.retina = 2, out.width = "1150"}
+```{r 02-tidy-image, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Tidy data", fig.retina = 2, out.width = "1150pt"}
 knitr::include_graphics("img/tidy_data.jpeg")
 ```
 
@@ -190,7 +190,7 @@ under each year represent in the table. Also, we can't easily access the year
 values, so if we wanted to find the maximum year, for example, it's hard to do 
 when the values are not in their own column. We can reshape this data set to a long format by creating a column called "year" and a column called "population," which is the table on the right.
 
-```{r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long data", fig.retina = 2, out.width = "1150"}
+```{r 02-wide-to-long, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long data", fig.retina = 2, out.width = "1150pt"}
 knitr::include_graphics("img/wide_to_long.jpeg")
 ```
 We can use the function `pivot_longer`, which combines columns, making the data frame longer and narrower. To learn how to use `pivot_longer`, we will work with the `region_lang_top5_cities_wide.csv` data set. This data set contains contains the counts of how many Canadians cited each language as their mother tongue for five major Canadian cities (Toronto, Montréal, Vancouver, Calgary and Edmonton) from the 2016 Canadian census. We will load the `tidyverse` packing so we can use our wrangling functions and the `canlang` package
@@ -211,13 +211,13 @@ What is wrong with our untidy format above? From a data analysis perspective, th
 To accomplish this data transformation, we will use the `tidyverse` function
 `pivot_longer`. Figure \@ref(fig:img-pivot-longer-with-table) summarizes how we want to
 reshape our data from wide to long with using the `pivot_longer` function. 
-```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long with the pivot_longer function", out.width="1100", fig.retina = 2}
+```{r img-pivot-longer-with-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from wide to long with the pivot_longer function", out.width="1100pt", fig.retina = 2}
 knitr::include_graphics("img/pivot_longer_with_table.jpeg")
 ```
 
 Figure \@ref(fig:img-pivot-longer) details what we need to specify to use `pivot_longer`.
 
-```{r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_longer function", out.width="1100", fig.retina = 2}
+```{r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_longer function", out.width="1100pt", fig.retina = 2}
 knitr::include_graphics("img/pivot_longer.jpeg")
 ```
 
@@ -249,7 +249,7 @@ Suppose we have observations spread across multiple rows rather than in a single
 untidy format because the `count` column contains two variables (population and commuter count) and each observation is split across two rows.
 Using data in this format means it's harder to apply functions when the values are not in their own column. For example, finding the maximum number of commuters is possible to do with the untidy table but requires a few more steps and is cumbersome. We can reshape this data set to a wider format by creating a column called "population" and a column called "commuters", which is the table on the right.
 
-```{r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data", fig.retina = 2, out.width = "1150"}
+```{r long-to-wide, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide data", fig.retina = 2, out.width = "1150pt"}
 knitr::include_graphics("img/long_to_wide.jpeg")
 ```
 To tidy this type of data in R, we can use the function `pivot_wider`, which generally increases the number of columns (widens) and decreases the number of rows in a data set. The data set `region_lang_top5_cities_long.csv` contains the number of Canadians reporting the primary language at home and work for five major cities (Toronto, Montréal, Vancouver, Calgary and Edmonton). 
@@ -261,13 +261,13 @@ lang_long
 What is wrong with this format above? In this example, each observation should be a language in a region. However, in the messy data set above, each observation is split across multiple rows. One where the count for `most_at_home` is recorded and the other where the count for `most_at_work` is recorded. Suppose we wanted to visualize the relationship between the number of Canadians reporting their primary language at home and work. It would be difficult to do that with the data in its current format.
 
 We can see how we would like to transform the data from long to wide with `pivot_wider` in Figure \@ref(fig:img-pivot-wider-table).  
-```{r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide with pivot_wider", out.width="1100", fig.retina = 2}
+```{r img-pivot-wider-table, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Going from long to wide with pivot_wider", out.width="1100pt", fig.retina = 2}
 knitr::include_graphics("img/pivot_wider_with_table.jpeg")
 ```
 
 To tidy this data, we will use `pivot_wider`, and Figure \@ref(fig:img-pivot-wider) details what we need to specify to use this function. 
 
-```{r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_wider function", out.width="1100", fig.retina = 2}
+```{r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the pivot_wider function", out.width="1100pt", fig.retina = 2}
 knitr::include_graphics("img/pivot_longer.jpeg")
 ```
 
@@ -452,7 +452,7 @@ Here it makes sense for `region`, `category`, and `language` to be stored as a c
 
 `mutate`'s general syntax is detailed in Figure \@ref(fig:img-mutate). 
 
-```{r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function", out.width="1100", fig.retina = 2}
+```{r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Syntax for the mutate function", out.width="1100pt", fig.retina = 2}
 knitr::include_graphics("img/mutate_function.jpeg")
 ```
 
