improved image size for fig 02-plot

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -966,7 +966,7 @@ cleaned already, in a few short lines of code, we can use `ggplot` to create a
 data visualization to answer this question! Here we create a bar chart to represent the proportions for
 each region and color the proportions by language.
 
-``` {r 02-plot}
+```{r 02-plot, fig.width = 7, fig.height = 2.5}
 ggplot(
   official_langs,
   aes(
@@ -976,7 +976,7 @@ ggplot(
   )
 ) +
   geom_bar(stat = "identity") +
-  xlab("Proportion of residents reporting their primary language at home") +
+  xlab("Language reported as the primary language at home (proportion)") +
   ylab("Region")
 ```
 
