small plot changes related to simplifuing the mutate example

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -921,7 +921,8 @@ Failing to do this would have resulted in the incorrect math to be performed.
 In more advanced data wrangling, 
 one might solve this problem in a less error-prone way though using 
 a technique called joins. 
-We link to resources that discuss this in the additional resources section below.
+We link to resources that discuss this in the Additional
+Resources section at the end of the chapter.
 
 ## Creating a visualization with tidy data
 
