fixed bib entry for tidy data

--- a/references.bib
+++ b/references.bib
@@ -51,7 +51,7 @@
 
 @article{wickham2014tidy,
   title={Tidy data},
-  author={Wickham, Hadley and others},
+  author={Wickham, Hadley},
   journal={Journal of Statistical Software},
   volume={59},
   number={10},
